plasma-lab-src/fr.inria.plasmalab.root/fr.inria.plasmalab.gcsl/src/main/java/fr/inria/plasmalab/gcsl/tools/GCSLGrammarParser.java
/**
 * This file is part of fr.inria.plasmalab.gcsl.
 *
 * fr.inria.plasmalab.gcsl is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Lesser General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * fr.inria.plasmalab.gcsl is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with fr.inria.plasmalab.gcsl.  If not, see <http://www.gnu.org/licenses/>.
 */
// $ANTLR 3.5 /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g 2015-02-20 11:14:44

package fr.inria.plasmalab.gcsl.tools;

import java.util.HashMap;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.LinkedList;
import java.io.File;
import java.io.IOException;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class GCSLGrammarParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "Float", "Ident", "Natural", "TimeUnit", 
		"Variable", "WS", "'!'", "'&'", "'('", "')'", "'*'", "'+'", "','", "'-'", 
		"'->'", "'.'", "'/'", "';'", "'<'", "'<='", "'='", "'=>'", "'>'", "'>='", 
		"'BLTL Vars:'", "'Goal:'", "'Hypothesis:'", "'['", "']'", "'always'", 
		"'at most'", "'at('", "'by'", "'does not'", "'during'", "'exists'", "'false'", 
		"'following'", "'forAll'", "'forever'", "'holds'", "'implies'", "'mean('", 
		"'occurs'", "'prod('", "'raises'", "'sum('", "'then'", "'times'", "'true'", 
		"'whenever'", "'with a probability'", "'within'", "'|'"
	};
	public static final int EOF=-1;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int Float=4;
	public static final int Ident=5;
	public static final int Natural=6;
	public static final int TimeUnit=7;
	public static final int Variable=8;
	public static final int WS=9;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public GCSLGrammarParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public GCSLGrammarParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return GCSLGrammarParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g"; }


	  Model model;
	  //TODO k = ???
	  int k = 1001;
	  
	  
	  public String parseGCSL(Model model){
	    //this.k = k;
	    this.model = model;
	    try {
	      return pattern_specification();
	    } catch (RecognitionException e) {
	      // TODO Auto-generated catch block
	      e.printStackTrace();
	    }
	    return "error during translation";
	  }
	  
	  private List<String> errors = new LinkedList<String>();
	  
	  public void displayRecognitionError(RecognitionException e) {
	        String hdr = getErrorHeader(e);
	        String msg = getErrorMessage(e, this.tokenNames);
	        errors.add(hdr + " " + msg);
	  }
	  public List<String> getErrors() {
	        return errors;
	  }



	// $ANTLR start "pattern_specification"
	// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g:63:1: pattern_specification returns [String property] : ( 'Hypothesis:' p= pattern_specification 'Goal:' g= pattern_specification bltl_vars | ocl_expr '->' 'forAll' '(' Variable '|' behavioral_pattern ')' | ocl_expr '->' 'exists' '(' Variable '|' behavioral_pattern ')' | behavioral_pattern EOF );
	public final String pattern_specification() throws RecognitionException {
		String property = null;


		Token Variable4=null;
		Token Variable7=null;
		String p =null;
		String g =null;
		ParserRuleReturnScope bltl_vars1 =null;
		String ocl_expr2 =null;
		String behavioral_pattern3 =null;
		String ocl_expr5 =null;
		String behavioral_pattern6 =null;
		String behavioral_pattern8 =null;

		try {
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g:64:3: ( 'Hypothesis:' p= pattern_specification 'Goal:' g= pattern_specification bltl_vars | ocl_expr '->' 'forAll' '(' Variable '|' behavioral_pattern ')' | ocl_expr '->' 'exists' '(' Variable '|' behavioral_pattern ')' | behavioral_pattern EOF )
			int alt1=4;
			switch ( input.LA(1) ) {
			case 30:
				{
				alt1=1;
				}
				break;
			case Variable:
				{
				int LA1_2 = input.LA(2);
				if ( (LA1_2==18) ) {
					int LA1_4 = input.LA(3);
					if ( (LA1_4==42) ) {
						alt1=2;
					}
					else if ( (LA1_4==39) ) {
						alt1=3;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return property;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 1, 4, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return property;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 1, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 31:
			case 33:
			case 54:
				{
				alt1=4;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return property;}
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}
			switch (alt1) {
				case 1 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g:64:5: 'Hypothesis:' p= pattern_specification 'Goal:' g= pattern_specification bltl_vars
					{
					match(input,30,FOLLOW_30_in_pattern_specification68); if (state.failed) return property;
					pushFollow(FOLLOW_pattern_specification_in_pattern_specification71);
					p=pattern_specification();
					state._fsp--;
					if (state.failed) return property;
					match(input,29,FOLLOW_29_in_pattern_specification72); if (state.failed) return property;
					pushFollow(FOLLOW_pattern_specification_in_pattern_specification75);
					g=pattern_specification();
					state._fsp--;
					if (state.failed) return property;
					pushFollow(FOLLOW_bltl_vars_in_pattern_specification77);
					bltl_vars1=bltl_vars();
					state._fsp--;
					if (state.failed) return property;
					if ( state.backtracking==0 ) {property = "G<=#K"+p+"=>"+g+"\n"+(bltl_vars1!=null?input.toString(bltl_vars1.start,bltl_vars1.stop):null);
					    }
					}
					break;
				case 2 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g:68:5: ocl_expr '->' 'forAll' '(' Variable '|' behavioral_pattern ')'
					{
					pushFollow(FOLLOW_ocl_expr_in_pattern_specification92);
					ocl_expr2=ocl_expr();
					state._fsp--;
					if (state.failed) return property;
					match(input,18,FOLLOW_18_in_pattern_specification94); if (state.failed) return property;
					match(input,42,FOLLOW_42_in_pattern_specification96); if (state.failed) return property;
					match(input,12,FOLLOW_12_in_pattern_specification98); if (state.failed) return property;
					Variable4=(Token)match(input,Variable,FOLLOW_Variable_in_pattern_specification99); if (state.failed) return property;
					match(input,57,FOLLOW_57_in_pattern_specification101); if (state.failed) return property;
					pushFollow(FOLLOW_behavioral_pattern_in_pattern_specification103);
					behavioral_pattern3=behavioral_pattern();
					state._fsp--;
					if (state.failed) return property;
					match(input,13,FOLLOW_13_in_pattern_specification104); if (state.failed) return property;
					if ( state.backtracking==0 ) {
					      String moduleType = ocl_expr2;
					      String pattern = behavioral_pattern3;
					      property = "";
					      HashMap<String, Module> hash = model.getHash();
					      
					      //For each module selected by the forAll/exists
					      for(Module m:hash.values()){
					        if(m.getType().equals(moduleType)){
						        String pTemp = pattern;
						        pTemp = pTemp.replaceAll((Variable4!=null?Variable4.getText():null)+"\\.",m.getName()+".");
						        property += ("& "+"("+pTemp+")");
						       }
					      }
					      //For each module
					      for(Module m:hash.values()){
					          for(Substitution sub: m.getSubs()){
					            property = property.replaceAll(m.getName()+"\\."+sub.getOriginal(), sub.getSubstitute());
					          }
					          property = property.replaceAll(m.getName()+"\\.","");
					      }
					      property = property.substring(2);
					      property = property.replaceAll("\\[","(");
					      property = property.replaceAll("]",")");
					    }
					}
					break;
				case 3 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g:94:5: ocl_expr '->' 'exists' '(' Variable '|' behavioral_pattern ')'
					{
					pushFollow(FOLLOW_ocl_expr_in_pattern_specification116);
					ocl_expr5=ocl_expr();
					state._fsp--;
					if (state.failed) return property;
					match(input,18,FOLLOW_18_in_pattern_specification118); if (state.failed) return property;
					match(input,39,FOLLOW_39_in_pattern_specification120); if (state.failed) return property;
					match(input,12,FOLLOW_12_in_pattern_specification122); if (state.failed) return property;
					Variable7=(Token)match(input,Variable,FOLLOW_Variable_in_pattern_specification123); if (state.failed) return property;
					match(input,57,FOLLOW_57_in_pattern_specification125); if (state.failed) return property;
					pushFollow(FOLLOW_behavioral_pattern_in_pattern_specification127);
					behavioral_pattern6=behavioral_pattern();
					state._fsp--;
					if (state.failed) return property;
					match(input,13,FOLLOW_13_in_pattern_specification128); if (state.failed) return property;
					if ( state.backtracking==0 ) {
					      String moduleType = ocl_expr5;
					      String pattern = behavioral_pattern6;
					      property = "";
					      HashMap<String, Module> hash = model.getHash();
					      
					      //For each module selected by the forAll/exists
					      for(Module m:hash.values()){
					        if(m.getType().equals(moduleType)){
					          String pTemp = pattern;
					          pTemp = pTemp.replaceAll((Variable7!=null?Variable7.getText():null)+"\\.",m.getName()+".");
					          property += ("| "+"("+pTemp+")");
					         }
					      }
					      //For each module
					      for(Module m:hash.values()){
					          for(Substitution sub: m.getSubs()){
					            property = property.replaceAll(m.getName()+"\\."+sub.getOriginal(), sub.getSubstitute());
					          }
					          property = property.replaceAll(m.getName()+"\\.","");
					      }
					      property = property.substring(2);
					      property = property.replaceAll("\\[","(");
					      property = property.replaceAll("]",")");
					    }
					}
					break;
				case 4 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g:121:5: behavioral_pattern EOF
					{
					pushFollow(FOLLOW_behavioral_pattern_in_pattern_specification143);
					behavioral_pattern8=behavioral_pattern();
					state._fsp--;
					if (state.failed) return property;
					if ( state.backtracking==0 ) {
					      // TODO Because we can't locate the model, we can't translate the pattern. 
					      // This should be modified once PLASMA has been modified to parse a property with a given model
					      property = behavioral_pattern8;
					      System.err.println("Pattern only is not yet supported");
					    }
					match(input,EOF,FOLLOW_EOF_in_pattern_specification153); if (state.failed) return property;
					}
					break;

			}
		}
		 
		    catch (RecognitionException e) {
		        reportError(e);
		        displayRecognitionError(e);
		        throw e;
		    }

		finally {
			// do for sure before leaving
		}
		return property;
	}
	// $ANTLR end "pattern_specification"



	// $ANTLR start "arith_proposition"
	// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g:131:1: arith_proposition : expr ( '<' | '<=' | '=' | '>=' | '>' |) expr ;
	public final void arith_proposition() throws RecognitionException {
		try {
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g:132:3: ( expr ( '<' | '<=' | '=' | '>=' | '>' |) expr )
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g:132:5: expr ( '<' | '<=' | '=' | '>=' | '>' |) expr
			{
			pushFollow(FOLLOW_expr_in_arith_proposition166);
			expr();
			state._fsp--;
			if (state.failed) return;
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g:132:10: ( '<' | '<=' | '=' | '>=' | '>' |)
			int alt2=6;
			switch ( input.LA(1) ) {
			case 22:
				{
				alt2=1;
				}
				break;
			case 23:
				{
				alt2=2;
				}
				break;
			case 24:
				{
				alt2=3;
				}
				break;
			case 27:
				{
				alt2=4;
				}
				break;
			case 26:
				{
				alt2=5;
				}
				break;
			case Natural:
			case Variable:
			case 12:
			case 35:
			case 46:
			case 48:
			case 50:
				{
				alt2=6;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g:132:11: '<'
					{
					match(input,22,FOLLOW_22_in_arith_proposition169); if (state.failed) return;
					}
					break;
				case 2 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g:132:17: '<='
					{
					match(input,23,FOLLOW_23_in_arith_proposition173); if (state.failed) return;
					}
					break;
				case 3 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g:132:24: '='
					{
					match(input,24,FOLLOW_24_in_arith_proposition177); if (state.failed) return;
					}
					break;
				case 4 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g:132:30: '>='
					{
					match(input,27,FOLLOW_27_in_arith_proposition181); if (state.failed) return;
					}
					break;
				case 5 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g:132:37: '>'
					{
					match(input,26,FOLLOW_26_in_arith_proposition185); if (state.failed) return;
					}
					break;
				case 6 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g:132:43: 
					{
					}
					break;

			}

			pushFollow(FOLLOW_expr_in_arith_proposition191);
			expr();
			state._fsp--;
			if (state.failed) return;
			}

		}
		 
		    catch (RecognitionException e) {
		        reportError(e);
		        displayRecognitionError(e);
		        throw e;
		    }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "arith_proposition"



	// $ANTLR start "operator"
	// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g:134:1: operator : ( '+' | '-' | '*' | '/' );
	public final void operator() throws RecognitionException {
		try {
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g:134:9: ( '+' | '-' | '*' | '/' )
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/GCSLGrammar.g:
			{
			if ( (input.LA(1) >= 14 && input.LA(1) <= 15)||input.LA(1)==17||input.LA(1)==20 ) {
				input.consume();
				state.errorRecovery=false;
				state.failed=false;
			}
			else {
				if (state.backtracking>0) {state.failed=true; return;}
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

		}
		 
		    catch (RecognitionException e) {
		        reportError(e);
		        displayRecognitionError(e);
		        throw e;
		    }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "operator"


